--- a/controls.yml
+++ b/controls.yml
@@ -26,7 +26,11 @@ captioned_image:
 
 checkbox:
   type: input
-  type: checkbox
+  attr: { type: checkbox }
+
+class:
+  type: template
+  class: $id
 
 container:
   tag: div
@@ -115,11 +119,13 @@ disabled_text_input:
   type: disabled_input
 
 
+div: {tag: div}
+
 dropdown:
   unselected: --Select $name--
   tag: select
   text: |
-    <option value=''>$unselected</option>
+    <option>$unselected</option>
     $options
   options:
     - type: dropdown_option
@@ -127,8 +133,8 @@ dropdown:
 dropdown_option:
   tag: option
   value: $1
-  name: $2
-  attr: { value: $id }
+  text: $2
+  attr: { value: $value }
 
 element:
   text: ""
@@ -198,36 +204,29 @@ image:
   text: ""
 
 info_line:
-  type: template
-  text: |
-    <label>$name</label>
-    <div class=info-text>$field</div>
+  type: label_left
+  label_suffix: ":"
+  class: [info-line]
 
 info_page:
-    html: |
-      <div>
-        <p class="desc">$desc</p>
-        <span class=ajax_result style="display: none;"></span>
-        <div class="form">
-          $lines
-          <p></p>$actions
-        </div>
-      </div>
-    attr:
-      page: $name
-      title: $name
-    lines:
-      - type: info_text
-      - template: info_line
-    actions:
-      - type: submit
+  type: input_page
+  lines: $inputs
+  inherit: [label_suffix]
+  label_suffix: ":"
+  inputs:
+    - type: info_text
+    - template: info_line
 
-
-info_text: { text: $value }
+info_text:
+  tag: div
+  class: [info-text]
+  value: ""
+  text: $value
 
 inplace_input:
   type: template
   css: [/common/inplace_input.css]
+  style: { display: $pack }
   text: |
       <a class=input>
         $field
@@ -247,20 +246,19 @@ input:
 input_page:
   type: page
   css: [/common/input_page.css]
-  inherit: [desc, actions]
+  label_width: 24%
+  input_width: 73%
+  label_suffix: ":"
+  pack: inline
+  inherit: [desc, input_width, label_width, label_suffix, pack]
   loading: { type: processing }
   synopsis: { type: section_heading, text: $desc}
-  text: $loading $synopsis $inputs #$actions
+  text: $loading $synopsis $inputs $actions
   inputs:
     - template: labelled_input
     - type: input
-    - actions:
-        push: last
-        type: template
-        template: none
-        class: [actions]
-        text: $actions
   actions:
+    - wrap: class
     - type: submit
 
 label:
@@ -268,7 +266,10 @@ label:
 
 label_left:
   type: label_template
-  text: <label>$name</label>$field
+  label_suffix: ""
+  text: <label>$name$label_suffix</label>$field
+  subject:
+    style: { margin-right: 20px }
 
 label_right:
   type: label_template
@@ -284,13 +285,13 @@ label_top:
 
 labelled_input:
   type: template
+  style: { display: $pack }
   text: |
-      <label>$name$label_suffix</label>
-      <a class=input>
+      <label style="width: $label_width">$name$label_suffix</label>
+      <a class=input style="width: $input_width">
         $field
         <span class=hint>$desc</span>
       </a>
-  label_suffix: ":"
 
 labelled_input_page:
   type: input_page
@@ -371,7 +372,7 @@ print:
   desc: Print above contents
   action: redirect
   validate: none
-  call: datatable::pdf(context, $key)
+  call: datatable::pdf(context,$key)
   query: " "
   target: _blank
 
@@ -395,6 +396,9 @@ question_input_page:
 radiobox:
   type: input
   attr: { type: radio, value: $id}
+  style:
+    width: 24px
+    height: 24px
 
 radiogroup:
   tag: div
