--- a/validators.yml
+++ b/validators.yml
@@ -2,8 +2,8 @@
 ---
 after_period:
   3: now()
-  valid: sql(select timestampdiff($2,$3,$value) <= $v1)
-  error: $name must be after $v1 $v2
+  valid: sql(select timestampdiff($2,$3,'$value') > $1)
+  error: $name must be after $1 $2
 
 alphabetic: must_be([a-zA-Z]+,alphabetic)
 
@@ -14,8 +14,8 @@ at_least:
 
 before_period:
   3: now()
-  valid: sql(select timestampdiff($2,$value,$3) <= $v1)
-  error: $name must be before $v1 $v2
+  valid: sql(select timestampdiff($2,'$value',$3) < '$1')
+  error: $name must be before $1 $2
 
 between:
   valid: range($1,$2,$3)
