--- a/controls.yml
+++ b/controls.yml
@@ -14,6 +14,7 @@ accordion_tab:
   templates: div
   text: <h3>$name</h3>$field
 
+
 blank:
   tag: span
   text: ""
@@ -126,6 +127,7 @@ disabled_input:
 
 disabled_text_input:
   type: disabled_input
+
 
 dropdown:
   unselected: --Select $name--
@@ -404,6 +406,7 @@ processing:
 question_input:
   templates: div
   text: <label>$question</label>$field
+  subject: { class: [input] }
 
 question_input_page:
   type: input_page
