renderd add_new_patient use case as wizard from accordion, still to conclude by saving to db

--- a/user.yml
+++ b/user.yml
@@ -169,7 +169,8 @@ enter_credentials:
     - first_name
     - last_name
     - cellphone
-    - email: { valid: [unique(user.email_address)] }
+    - email
+    # - email: { valid: [unique(user.email_address)] }
     - type: password_input
     - password
     - confirm_password
